[package]
name = "PiBuzz"
version = "0.1.0"
authors = ["LeMoussel"]

# Ref: http://doc.crates.io/manifest.html#the-profile-sections
# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0      		# controls the `--opt-level` the compiler builds with
debug = true       		# controls whether the compiler passes `-C debuginfo`
						# a value of `true` is equivalent to `2`
rpath = false      		# controls whether the compiler passes `-C rpath`
lto = false        		# controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1  		# controls whether the compiler passes `-C codegen-units`
						# `codegen-units` is ignored when `lto = true`
panic = 'unwind'   		# panic strategy (`-C panic=...`), can also be 'abort'

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'

# The testing profile, used for `cargo test`.
[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

# The benchmarking profile, used for `cargo bench`.
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

# The documentation profile, used for `cargo doc`.
[profile.doc]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[dependencies]
sysfs_gpio = "*"
